// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modal like a confirm modal 1`] = `
<Component>
  <ThemeProvider
    theme={
      Object {
        "colors": Object {
          "aqua100": "#e4fafd",
          "aqua500": "#76bde8",
          "aqua900": "#16386f",
          "black": "#262B34",
          "blackLight": "#5f656b",
          "blackberry": "#2e2d4c",
          "blackberryDark": "#24243C",
          "blue100": "#cceeff",
          "blue200": "#99d8ff",
          "blue400": "#3fa4ff",
          "blue500": "#007aff",
          "blue600": "#005edb",
          "blue900": "#00237a",
          "disabledGrey": "#ced4d9",
          "green": "#86AD20",
          "green100": "#f4fad2",
          "green200": "#e7f6a6",
          "green400": "#aecd50",
          "green500": "#86ad20",
          "green600": "#6e9417",
          "green900": "#345306",
          "greenLight": "#e7f1d5",
          "grey": "#697782",
          "greyLight": "#f0f3f5",
          "greySoft": "#788590",
          "lines": "#dce3eb",
          "link": "#216db3",
          "linkDark": "#174a79",
          "neutral100": "#f9f9fa",
          "neutral200": "#f4f5f6",
          "neutral300": "#e9ecee",
          "neutral400": "#dfe2e5",
          "neutral500": "#d4d8dc",
          "neutral600": "#a9b1b9",
          "neutral700": "#7d8a96",
          "neutral800": "#526373",
          "neutral900": "#273c50",
          "neutralBase": "#ffffff",
          "orange100": "#fff1cc",
          "orange200": "#ffde99",
          "orange400": "#ffb13f",
          "orange500": "#ff8c00",
          "orange600": "#db6e00",
          "orange900": "#7a2c00",
          "overlay": "rgba(33,33,33,0.55)",
          "placeholders": "#e1e4e7",
          "placeholdersHover": "#d0d4d8",
          "primary": "#FF8C00",
          "primaryDark": "#C87600",
          "primaryLight": "#fef4e6",
          "primarySoft": "#ff9d26",
          "purple": "#AA5B9C",
          "purple100": "#fae3ed",
          "purple500": "#aa5b9c",
          "purple900": "#441151",
          "purpleLight": "#EEDEEB",
          "red": "#f04540",
          "red100": "#ffe5d5",
          "red200": "#ffc5ac",
          "red400": "#ff7863",
          "red500": "#ff3b30",
          "red600": "#db2328",
          "red900": "#7a0929",
          "redDark": "#C43833",
          "redLight": "#FAE7E7",
          "redSoft": "#FF544F",
          "secondary": "#00A8Be",
          "secondaryGrey": "#e4eeff",
          "secondaryLight": "#D6EEF2",
          "secondaryOverlay": "rgba(2,168,189,0.10)",
          "secondarySoft": "#AADFE7",
          "shadow": "rgba(0, 0, 0, 0.25)",
          "tableHeader": "#f6f7f9",
          "tableHeaderHover": "#EBECEF",
          "tableHover": "#FAFBFC",
          "text": Object {
            "black": "#3c4248",
            "danger": "white",
            "default": "#697782",
            "green": "#86AD20",
            "greySoft": "#788590",
            "primary": "white",
            "red": "#f04540",
            "secondary": "#00A8Be",
            "white": "#FFFFFF",
            "yellow": "#E9B200",
          },
          "transparentBlack": "rgba(38, 43, 52, 0.8)",
          "turquoise100": "#c9fbf1",
          "turquoise500": "#00a8be",
          "turquoise900": "#00335b",
          "white": "#FFFFFF",
          "yellow": "#E9B200",
          "yellow100": "#fdf6cb",
          "yellow200": "#fcec97",
          "yellow400": "#f1cb3c",
          "yellow500": "#e9b200",
          "yellow600": "#c89400",
          "yellow900": "#6f4a00",
          "yellowDark": "#BE9100",
          "yellowLight": "#FCF7E5",
        },
        "effects": Object {
          "boxShadow": "0 3px 9px 0 rgba(0, 0, 0, 0.25)",
          "buttonActive": Object {
            "boxShadow": "inset 0 -2px 4px 0 rgba(51, 51, 51, 0.23)",
          },
        },
        "typography": Object {
          "bigText": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 20,
            "letterSpacing": 0.5,
          },
          "button": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 11,
            "lineHeight": 1.5,
          },
          "defaultText": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 13,
            "letterSpacing": 0.5,
          },
          "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
          "fontSizeBase": 13,
          "fontSizeSmall": 11,
          "largeText": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 16,
            "letterSpacing": 0.5,
          },
          "letterSpacing": 0.5,
          "lineHeightBase": 1.5,
          "smallText": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 11,
            "letterSpacing": 0.5,
          },
        },
        "utils": Object {
          "scrollbar": Object {
            "&::-webkit-scrollbar": Object {
              "height": 17,
              "width": 17,
            },
            "&::-webkit-scrollbar-thumb": Object {
              "background": "#e1e4e7",
              "backgroundClip": "content-box",
              "border": "4px solid rgba(0, 0, 0, 0)",
              "borderRadius": 10,
            },
            "&::-webkit-scrollbar-thumb:window-inactive": Object {
              "background": "#e1e4e7",
              "backgroundClip": "content-box",
              "border": "4px solid rgba(0, 0, 0, 0)",
              "borderRadius": 10,
            },
          },
        },
      }
    }
  >
    <JssProvider
      classNamePrefix="HoiPoi__"
      generateId={[Function]}
      jss={
        Jss {
          "generateId": [Function],
          "id": 3,
          "options": Object {
            "Renderer": [Function],
            "createGenerateId": [Function],
            "id": Object {
              "minify": false,
            },
            "plugins": Array [],
          },
          "plugins": PluginsRegistry {
            "plugins": Object {
              "external": Array [
                Object {
                  "onCreateRule": [Function],
                  "onProcessStyle": [Function],
                  "onUpdate": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                  "onProcessRule": [Function],
                },
                Object {
                  "onProcessRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                  "onProcessRule": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessRule": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
              ],
              "internal": Array [
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onCreateRule": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
              ],
            },
            "registry": Object {
              "onChangeValue": Array [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onCreateRule": Array [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onProcessRule": Array [
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onProcessSheet": Array [],
              "onProcessStyle": Array [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onUpdate": Array [
                [Function],
              ],
            },
          },
          "version": "10.3.0",
        }
      }
    >
      <Modal
        cancelText="Cancel"
        closeTimeoutMS={300}
        confirmText="Confirm"
        isOpen={true}
        onCancel={[Function]}
        onConfirm={[Function]}
        shouldCloseOnEsc={true}
        shouldCloseOnOverlayClick={true}
        size="medium"
        title="Lorem modal"
        useCornerClose={true}
        useHeader={true}
      >
        <Modal
          ariaHideApp={false}
          bodyOpenClassName="ReactModal__Body--open"
          className="HoiPoi__Modal__root-3-0"
          closeTimeoutMS={300}
          isOpen={true}
          overlayClassName="HoiPoi__Modal__overlay-3-1"
          parentSelector={[Function]}
          portalClassName="ReactModalPortal"
          role="dialog"
          shouldCloseOnEsc={true}
          shouldCloseOnOverlayClick={true}
          shouldFocusAfterRender={true}
          shouldReturnFocusAfterClose={true}
          style={
            Object {
              "content": Object {
                "bottom": "auto",
                "left": "50%",
                "marginRight": "-50%",
                "right": "auto",
                "top": "50%",
                "transform": "translate(-50%, -50%)",
                "width": 670,
              },
            }
          }
        >
          <Portal
            containerInfo={
              <div
                class="ReactModalPortal"
              >
                <div
                  class="ReactModal__Overlay ReactModal__Overlay--after-open HoiPoi__Modal__overlay-3-1"
                >
                  <div
                    class="ReactModal__Content ReactModal__Content--after-open HoiPoi__Modal__root-3-0"
                    role="dialog"
                    style="width: 670px; top: 50%; left: 50%; margin-right: -50%; transform: translate(-50%, -50%);"
                    tabindex="-1"
                  >
                    <div
                      class="HoiPoi__Modal__header-3-2"
                    >
                      <span
                        class="HoiPoi__Text__root-3-9 HoiPoi__Text__normal-3-16 HoiPoi__Text__big-3-14 HoiPoi__Modal__title-3-3"
                      >
                        Lorem modal
                      </span>
                      <span
                        class="HoiPoi__Icon__root-3-20 HoiPoi__Icon__medium-3-22 HoiPoi__Modal__closeIcon-3-6"
                      >
                        <svg
                          viewBox="0 0 18 18"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M9 7.409l7.08-7.08a1.125 1.125 0 1 1 1.59 1.591L10.591 9l7.08 7.08a1.125 1.125 0 1 1-1.591 1.59L9 10.591l-7.08 7.08A1.125 1.125 0 1 1 .33 16.08L7.409 9 .329 1.92A1.125 1.125 0 0 1 1.92.33L9 7.409z"
                            fill="#788590"
                            fill-rule="nonzero"
                          />
                        </svg>
                      </span>
                    </div>
                    <div
                      class="HoiPoi__Modal__content-3-5"
                    >
                      Lorem Ipsum
                    </div>
                    <div
                      class="HoiPoi__Modal__footer-3-4"
                    >
                      <button
                        class="HoiPoi__Button__root-3-27 HoiPoi__Button__filled-3-34 HoiPoi__Button__white-3-35 HoiPoi__Modal__cancelButton-3-8"
                        type="button"
                      >
                        <span
                          class=""
                        >
                          <span
                            class="HoiPoi__Text__root-3-9 HoiPoi__Text__normal-3-16 HoiPoi__Text__medium-3-12 HoiPoi__Button__Text-3-28"
                          >
                            Cancel
                          </span>
                        </span>
                      </button>
                      <button
                        class="HoiPoi__Button__root-3-27 HoiPoi__Button__filled-3-34 HoiPoi__Button__primary-3-36 HoiPoi__Modal__confirmButton-3-7"
                        type="button"
                      >
                        <span
                          class=""
                        >
                          <span
                            class="HoiPoi__Text__root-3-9 HoiPoi__Text__normal-3-16 HoiPoi__Text__medium-3-12 HoiPoi__Button__Text-3-28"
                          >
                            Confirm
                          </span>
                        </span>
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            }
          >
            <ModalPortal
              ariaHideApp={false}
              bodyOpenClassName="ReactModal__Body--open"
              className="HoiPoi__Modal__root-3-0"
              closeTimeoutMS={300}
              defaultStyles={
                Object {
                  "content": Object {
                    "WebkitOverflowScrolling": "touch",
                    "background": "#fff",
                    "border": "1px solid #ccc",
                    "borderRadius": "4px",
                    "bottom": "40px",
                    "left": "40px",
                    "outline": "none",
                    "overflow": "auto",
                    "padding": "20px",
                    "position": "absolute",
                    "right": "40px",
                    "top": "40px",
                  },
                  "overlay": Object {
                    "backgroundColor": "rgba(255, 255, 255, 0.75)",
                    "bottom": 0,
                    "left": 0,
                    "position": "fixed",
                    "right": 0,
                    "top": 0,
                  },
                }
              }
              isOpen={true}
              overlayClassName="HoiPoi__Modal__overlay-3-1"
              parentSelector={[Function]}
              portalClassName="ReactModalPortal"
              role="dialog"
              shouldCloseOnEsc={true}
              shouldCloseOnOverlayClick={true}
              shouldFocusAfterRender={true}
              shouldReturnFocusAfterClose={true}
              style={
                Object {
                  "content": Object {
                    "bottom": "auto",
                    "left": "50%",
                    "marginRight": "-50%",
                    "right": "auto",
                    "top": "50%",
                    "transform": "translate(-50%, -50%)",
                    "width": 670,
                  },
                }
              }
            >
              <div
                className="ReactModal__Overlay ReactModal__Overlay--after-open HoiPoi__Modal__overlay-3-1"
                onClick={[Function]}
                onMouseDown={[Function]}
                style={Object {}}
              >
                <div
                  className="ReactModal__Content ReactModal__Content--after-open HoiPoi__Modal__root-3-0"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  onMouseDown={[Function]}
                  onMouseUp={[Function]}
                  role="dialog"
                  style={
                    Object {
                      "bottom": "auto",
                      "left": "50%",
                      "marginRight": "-50%",
                      "right": "auto",
                      "top": "50%",
                      "transform": "translate(-50%, -50%)",
                      "width": 670,
                    }
                  }
                  tabIndex="-1"
                >
                  <div
                    className="HoiPoi__Modal__header-3-2"
                  >
                    <Text
                      className="HoiPoi__Modal__title-3-3"
                      isTruncated={false}
                      overrides={Object {}}
                      size="big"
                      type="normal"
                    >
                      <span
                        className="HoiPoi__Text__root-3-9 HoiPoi__Text__normal-3-16 HoiPoi__Text__big-3-14 HoiPoi__Modal__title-3-3"
                      >
                        Lorem modal
                      </span>
                    </Text>
                    <Icon
                      className="HoiPoi__Modal__closeIcon-3-6"
                      name="close"
                      overrides={Object {}}
                      size="medium"
                    >
                      <span
                        className="HoiPoi__Icon__root-3-20 HoiPoi__Icon__medium-3-22 HoiPoi__Modal__closeIcon-3-6"
                      >
                        <Close
                          color="#788590"
                        >
                          <svg
                            viewBox="0 0 18 18"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M9 7.409l7.08-7.08a1.125 1.125 0 1 1 1.59 1.591L10.591 9l7.08 7.08a1.125 1.125 0 1 1-1.591 1.59L9 10.591l-7.08 7.08A1.125 1.125 0 1 1 .33 16.08L7.409 9 .329 1.92A1.125 1.125 0 0 1 1.92.33L9 7.409z"
                              fill="#788590"
                              fillRule="nonzero"
                            />
                          </svg>
                        </Close>
                      </span>
                    </Icon>
                  </div>
                  <div
                    className="HoiPoi__Modal__content-3-5"
                  >
                    Lorem Ipsum
                  </div>
                  <div
                    className="HoiPoi__Modal__footer-3-4"
                  >
                    <Button
                      className="HoiPoi__Modal__cancelButton-3-8"
                      onClick={[Function]}
                      overrides={Object {}}
                      size="medium"
                      type="filled"
                    >
                      <button
                        className="HoiPoi__Button__root-3-27 HoiPoi__Button__filled-3-34 HoiPoi__Button__white-3-35 HoiPoi__Modal__cancelButton-3-8"
                        onClick={[Function]}
                        type="button"
                      >
                        <span
                          className=""
                        >
                          <Text
                            className="HoiPoi__Button__Text-3-28"
                            isTruncated={false}
                            overrides={Object {}}
                            size="medium"
                            type="normal"
                          >
                            <span
                              className="HoiPoi__Text__root-3-9 HoiPoi__Text__normal-3-16 HoiPoi__Text__medium-3-12 HoiPoi__Button__Text-3-28"
                            >
                              Cancel
                            </span>
                          </Text>
                        </span>
                      </button>
                    </Button>
                    <Button
                      className="HoiPoi__Modal__confirmButton-3-7"
                      color="primary"
                      onClick={[Function]}
                      overrides={Object {}}
                      size="medium"
                      type="filled"
                    >
                      <button
                        className="HoiPoi__Button__root-3-27 HoiPoi__Button__filled-3-34 HoiPoi__Button__primary-3-36 HoiPoi__Modal__confirmButton-3-7"
                        onClick={[Function]}
                        type="button"
                      >
                        <span
                          className=""
                        >
                          <Text
                            className="HoiPoi__Button__Text-3-28"
                            isTruncated={false}
                            overrides={Object {}}
                            size="medium"
                            type="normal"
                          >
                            <span
                              className="HoiPoi__Text__root-3-9 HoiPoi__Text__normal-3-16 HoiPoi__Text__medium-3-12 HoiPoi__Button__Text-3-28"
                            >
                              Confirm
                            </span>
                          </Text>
                        </span>
                      </button>
                    </Button>
                  </div>
                </div>
              </div>
            </ModalPortal>
          </Portal>
        </Modal>
      </Modal>
    </JssProvider>
  </ThemeProvider>
</Component>
`;

exports[`Modal with different sizes 1`] = `
<Component>
  <ThemeProvider
    theme={
      Object {
        "colors": Object {
          "aqua100": "#e4fafd",
          "aqua500": "#76bde8",
          "aqua900": "#16386f",
          "black": "#262B34",
          "blackLight": "#5f656b",
          "blackberry": "#2e2d4c",
          "blackberryDark": "#24243C",
          "blue100": "#cceeff",
          "blue200": "#99d8ff",
          "blue400": "#3fa4ff",
          "blue500": "#007aff",
          "blue600": "#005edb",
          "blue900": "#00237a",
          "disabledGrey": "#ced4d9",
          "green": "#86AD20",
          "green100": "#f4fad2",
          "green200": "#e7f6a6",
          "green400": "#aecd50",
          "green500": "#86ad20",
          "green600": "#6e9417",
          "green900": "#345306",
          "greenLight": "#e7f1d5",
          "grey": "#697782",
          "greyLight": "#f0f3f5",
          "greySoft": "#788590",
          "lines": "#dce3eb",
          "link": "#216db3",
          "linkDark": "#174a79",
          "neutral100": "#f9f9fa",
          "neutral200": "#f4f5f6",
          "neutral300": "#e9ecee",
          "neutral400": "#dfe2e5",
          "neutral500": "#d4d8dc",
          "neutral600": "#a9b1b9",
          "neutral700": "#7d8a96",
          "neutral800": "#526373",
          "neutral900": "#273c50",
          "neutralBase": "#ffffff",
          "orange100": "#fff1cc",
          "orange200": "#ffde99",
          "orange400": "#ffb13f",
          "orange500": "#ff8c00",
          "orange600": "#db6e00",
          "orange900": "#7a2c00",
          "overlay": "rgba(33,33,33,0.55)",
          "placeholders": "#e1e4e7",
          "placeholdersHover": "#d0d4d8",
          "primary": "#FF8C00",
          "primaryDark": "#C87600",
          "primaryLight": "#fef4e6",
          "primarySoft": "#ff9d26",
          "purple": "#AA5B9C",
          "purple100": "#fae3ed",
          "purple500": "#aa5b9c",
          "purple900": "#441151",
          "purpleLight": "#EEDEEB",
          "red": "#f04540",
          "red100": "#ffe5d5",
          "red200": "#ffc5ac",
          "red400": "#ff7863",
          "red500": "#ff3b30",
          "red600": "#db2328",
          "red900": "#7a0929",
          "redDark": "#C43833",
          "redLight": "#FAE7E7",
          "redSoft": "#FF544F",
          "secondary": "#00A8Be",
          "secondaryGrey": "#e4eeff",
          "secondaryLight": "#D6EEF2",
          "secondaryOverlay": "rgba(2,168,189,0.10)",
          "secondarySoft": "#AADFE7",
          "shadow": "rgba(0, 0, 0, 0.25)",
          "tableHeader": "#f6f7f9",
          "tableHeaderHover": "#EBECEF",
          "tableHover": "#FAFBFC",
          "text": Object {
            "black": "#3c4248",
            "danger": "white",
            "default": "#697782",
            "green": "#86AD20",
            "greySoft": "#788590",
            "primary": "white",
            "red": "#f04540",
            "secondary": "#00A8Be",
            "white": "#FFFFFF",
            "yellow": "#E9B200",
          },
          "transparentBlack": "rgba(38, 43, 52, 0.8)",
          "turquoise100": "#c9fbf1",
          "turquoise500": "#00a8be",
          "turquoise900": "#00335b",
          "white": "#FFFFFF",
          "yellow": "#E9B200",
          "yellow100": "#fdf6cb",
          "yellow200": "#fcec97",
          "yellow400": "#f1cb3c",
          "yellow500": "#e9b200",
          "yellow600": "#c89400",
          "yellow900": "#6f4a00",
          "yellowDark": "#BE9100",
          "yellowLight": "#FCF7E5",
        },
        "effects": Object {
          "boxShadow": "0 3px 9px 0 rgba(0, 0, 0, 0.25)",
          "buttonActive": Object {
            "boxShadow": "inset 0 -2px 4px 0 rgba(51, 51, 51, 0.23)",
          },
        },
        "typography": Object {
          "bigText": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 20,
            "letterSpacing": 0.5,
          },
          "button": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 11,
            "lineHeight": 1.5,
          },
          "defaultText": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 13,
            "letterSpacing": 0.5,
          },
          "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
          "fontSizeBase": 13,
          "fontSizeSmall": 11,
          "largeText": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 16,
            "letterSpacing": 0.5,
          },
          "letterSpacing": 0.5,
          "lineHeightBase": 1.5,
          "smallText": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 11,
            "letterSpacing": 0.5,
          },
        },
        "utils": Object {
          "scrollbar": Object {
            "&::-webkit-scrollbar": Object {
              "height": 17,
              "width": 17,
            },
            "&::-webkit-scrollbar-thumb": Object {
              "background": "#e1e4e7",
              "backgroundClip": "content-box",
              "border": "4px solid rgba(0, 0, 0, 0)",
              "borderRadius": 10,
            },
            "&::-webkit-scrollbar-thumb:window-inactive": Object {
              "background": "#e1e4e7",
              "backgroundClip": "content-box",
              "border": "4px solid rgba(0, 0, 0, 0)",
              "borderRadius": 10,
            },
          },
        },
      }
    }
  >
    <JssProvider
      classNamePrefix="HoiPoi__"
      generateId={[Function]}
      jss={
        Jss {
          "generateId": [Function],
          "id": 3,
          "options": Object {
            "Renderer": [Function],
            "createGenerateId": [Function],
            "id": Object {
              "minify": false,
            },
            "plugins": Array [],
          },
          "plugins": PluginsRegistry {
            "plugins": Object {
              "external": Array [
                Object {
                  "onCreateRule": [Function],
                  "onProcessStyle": [Function],
                  "onUpdate": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                  "onProcessRule": [Function],
                },
                Object {
                  "onProcessRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                  "onProcessRule": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessRule": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
              ],
              "internal": Array [
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onCreateRule": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
              ],
            },
            "registry": Object {
              "onChangeValue": Array [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onCreateRule": Array [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onProcessRule": Array [
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onProcessSheet": Array [],
              "onProcessStyle": Array [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onUpdate": Array [
                [Function],
              ],
            },
          },
          "version": "10.3.0",
        }
      }
    >
      <Modal
        closeTimeoutMS={300}
        isOpen={true}
        shouldCloseOnEsc={true}
        shouldCloseOnOverlayClick={true}
        size="medium"
        title="Lorem modal"
        useCornerClose={true}
        useHeader={true}
      >
        <Modal
          ariaHideApp={false}
          bodyOpenClassName="ReactModal__Body--open"
          className="HoiPoi__Modal__root-1-0"
          closeTimeoutMS={300}
          isOpen={true}
          overlayClassName="HoiPoi__Modal__overlay-1-1"
          parentSelector={[Function]}
          portalClassName="ReactModalPortal"
          role="dialog"
          shouldCloseOnEsc={true}
          shouldCloseOnOverlayClick={true}
          shouldFocusAfterRender={true}
          shouldReturnFocusAfterClose={true}
          style={
            Object {
              "content": Object {
                "bottom": "auto",
                "left": "50%",
                "marginRight": "-50%",
                "right": "auto",
                "top": "50%",
                "transform": "translate(-50%, -50%)",
                "width": 670,
              },
            }
          }
        >
          <Portal
            containerInfo={
              <div
                class="ReactModalPortal"
              >
                <div
                  class="ReactModal__Overlay ReactModal__Overlay--after-open HoiPoi__Modal__overlay-1-1"
                >
                  <div
                    class="ReactModal__Content ReactModal__Content--after-open HoiPoi__Modal__root-1-0"
                    role="dialog"
                    style="width: 670px; top: 50%; left: 50%; margin-right: -50%; transform: translate(-50%, -50%);"
                    tabindex="-1"
                  >
                    <div
                      class="HoiPoi__Modal__header-1-2"
                    >
                      <span
                        class="HoiPoi__Text__root-1-9 HoiPoi__Text__normal-1-16 HoiPoi__Text__big-1-14 HoiPoi__Modal__title-1-3"
                      >
                        Lorem modal
                      </span>
                      <span
                        class="HoiPoi__Icon__root-1-20 HoiPoi__Icon__medium-1-22 HoiPoi__Modal__closeIcon-1-6"
                      >
                        <svg
                          viewBox="0 0 18 18"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M9 7.409l7.08-7.08a1.125 1.125 0 1 1 1.59 1.591L10.591 9l7.08 7.08a1.125 1.125 0 1 1-1.591 1.59L9 10.591l-7.08 7.08A1.125 1.125 0 1 1 .33 16.08L7.409 9 .329 1.92A1.125 1.125 0 0 1 1.92.33L9 7.409z"
                            fill="#788590"
                            fill-rule="nonzero"
                          />
                        </svg>
                      </span>
                    </div>
                    <div
                      class="HoiPoi__Modal__content-1-5"
                    >
                      Lorem ipsum
                    </div>
                  </div>
                </div>
              </div>
            }
          >
            <ModalPortal
              ariaHideApp={false}
              bodyOpenClassName="ReactModal__Body--open"
              className="HoiPoi__Modal__root-1-0"
              closeTimeoutMS={300}
              defaultStyles={
                Object {
                  "content": Object {
                    "WebkitOverflowScrolling": "touch",
                    "background": "#fff",
                    "border": "1px solid #ccc",
                    "borderRadius": "4px",
                    "bottom": "40px",
                    "left": "40px",
                    "outline": "none",
                    "overflow": "auto",
                    "padding": "20px",
                    "position": "absolute",
                    "right": "40px",
                    "top": "40px",
                  },
                  "overlay": Object {
                    "backgroundColor": "rgba(255, 255, 255, 0.75)",
                    "bottom": 0,
                    "left": 0,
                    "position": "fixed",
                    "right": 0,
                    "top": 0,
                  },
                }
              }
              isOpen={true}
              overlayClassName="HoiPoi__Modal__overlay-1-1"
              parentSelector={[Function]}
              portalClassName="ReactModalPortal"
              role="dialog"
              shouldCloseOnEsc={true}
              shouldCloseOnOverlayClick={true}
              shouldFocusAfterRender={true}
              shouldReturnFocusAfterClose={true}
              style={
                Object {
                  "content": Object {
                    "bottom": "auto",
                    "left": "50%",
                    "marginRight": "-50%",
                    "right": "auto",
                    "top": "50%",
                    "transform": "translate(-50%, -50%)",
                    "width": 670,
                  },
                }
              }
            >
              <div
                className="ReactModal__Overlay ReactModal__Overlay--after-open HoiPoi__Modal__overlay-1-1"
                onClick={[Function]}
                onMouseDown={[Function]}
                style={Object {}}
              >
                <div
                  className="ReactModal__Content ReactModal__Content--after-open HoiPoi__Modal__root-1-0"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  onMouseDown={[Function]}
                  onMouseUp={[Function]}
                  role="dialog"
                  style={
                    Object {
                      "bottom": "auto",
                      "left": "50%",
                      "marginRight": "-50%",
                      "right": "auto",
                      "top": "50%",
                      "transform": "translate(-50%, -50%)",
                      "width": 670,
                    }
                  }
                  tabIndex="-1"
                >
                  <div
                    className="HoiPoi__Modal__header-1-2"
                  >
                    <Text
                      className="HoiPoi__Modal__title-1-3"
                      isTruncated={false}
                      overrides={Object {}}
                      size="big"
                      type="normal"
                    >
                      <span
                        className="HoiPoi__Text__root-1-9 HoiPoi__Text__normal-1-16 HoiPoi__Text__big-1-14 HoiPoi__Modal__title-1-3"
                      >
                        Lorem modal
                      </span>
                    </Text>
                    <Icon
                      className="HoiPoi__Modal__closeIcon-1-6"
                      name="close"
                      overrides={Object {}}
                      size="medium"
                    >
                      <span
                        className="HoiPoi__Icon__root-1-20 HoiPoi__Icon__medium-1-22 HoiPoi__Modal__closeIcon-1-6"
                      >
                        <Close
                          color="#788590"
                        >
                          <svg
                            viewBox="0 0 18 18"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M9 7.409l7.08-7.08a1.125 1.125 0 1 1 1.59 1.591L10.591 9l7.08 7.08a1.125 1.125 0 1 1-1.591 1.59L9 10.591l-7.08 7.08A1.125 1.125 0 1 1 .33 16.08L7.409 9 .329 1.92A1.125 1.125 0 0 1 1.92.33L9 7.409z"
                              fill="#788590"
                              fillRule="nonzero"
                            />
                          </svg>
                        </Close>
                      </span>
                    </Icon>
                  </div>
                  <div
                    className="HoiPoi__Modal__content-1-5"
                  >
                    Lorem ipsum
                  </div>
                </div>
              </div>
            </ModalPortal>
          </Portal>
        </Modal>
      </Modal>
      <Modal
        closeTimeoutMS={300}
        isOpen={true}
        shouldCloseOnEsc={true}
        shouldCloseOnOverlayClick={true}
        size="small"
        title="Lorem modal"
        useCornerClose={true}
        useHeader={true}
      >
        <Modal
          ariaHideApp={false}
          bodyOpenClassName="ReactModal__Body--open"
          className="HoiPoi__Modal__root-1-0"
          closeTimeoutMS={300}
          isOpen={true}
          overlayClassName="HoiPoi__Modal__overlay-1-1"
          parentSelector={[Function]}
          portalClassName="ReactModalPortal"
          role="dialog"
          shouldCloseOnEsc={true}
          shouldCloseOnOverlayClick={true}
          shouldFocusAfterRender={true}
          shouldReturnFocusAfterClose={true}
          style={
            Object {
              "content": Object {
                "bottom": "auto",
                "left": "50%",
                "marginRight": "-50%",
                "right": "auto",
                "top": "50%",
                "transform": "translate(-50%, -50%)",
                "width": 400,
              },
            }
          }
        >
          <Portal
            containerInfo={
              <div
                class="ReactModalPortal"
              >
                <div
                  class="ReactModal__Overlay ReactModal__Overlay--after-open HoiPoi__Modal__overlay-1-1"
                >
                  <div
                    class="ReactModal__Content ReactModal__Content--after-open HoiPoi__Modal__root-1-0"
                    role="dialog"
                    style="width: 400px; top: 50%; left: 50%; margin-right: -50%; transform: translate(-50%, -50%);"
                    tabindex="-1"
                  >
                    <div
                      class="HoiPoi__Modal__header-1-2"
                    >
                      <span
                        class="HoiPoi__Text__root-1-9 HoiPoi__Text__normal-1-16 HoiPoi__Text__big-1-14 HoiPoi__Modal__title-1-3"
                      >
                        Lorem modal
                      </span>
                      <span
                        class="HoiPoi__Icon__root-1-20 HoiPoi__Icon__medium-1-22 HoiPoi__Modal__closeIcon-1-6"
                      >
                        <svg
                          viewBox="0 0 18 18"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M9 7.409l7.08-7.08a1.125 1.125 0 1 1 1.59 1.591L10.591 9l7.08 7.08a1.125 1.125 0 1 1-1.591 1.59L9 10.591l-7.08 7.08A1.125 1.125 0 1 1 .33 16.08L7.409 9 .329 1.92A1.125 1.125 0 0 1 1.92.33L9 7.409z"
                            fill="#788590"
                            fill-rule="nonzero"
                          />
                        </svg>
                      </span>
                    </div>
                    <div
                      class="HoiPoi__Modal__content-1-5"
                    >
                      Lorem ipsum
                    </div>
                  </div>
                </div>
              </div>
            }
          >
            <ModalPortal
              ariaHideApp={false}
              bodyOpenClassName="ReactModal__Body--open"
              className="HoiPoi__Modal__root-1-0"
              closeTimeoutMS={300}
              defaultStyles={
                Object {
                  "content": Object {
                    "WebkitOverflowScrolling": "touch",
                    "background": "#fff",
                    "border": "1px solid #ccc",
                    "borderRadius": "4px",
                    "bottom": "40px",
                    "left": "40px",
                    "outline": "none",
                    "overflow": "auto",
                    "padding": "20px",
                    "position": "absolute",
                    "right": "40px",
                    "top": "40px",
                  },
                  "overlay": Object {
                    "backgroundColor": "rgba(255, 255, 255, 0.75)",
                    "bottom": 0,
                    "left": 0,
                    "position": "fixed",
                    "right": 0,
                    "top": 0,
                  },
                }
              }
              isOpen={true}
              overlayClassName="HoiPoi__Modal__overlay-1-1"
              parentSelector={[Function]}
              portalClassName="ReactModalPortal"
              role="dialog"
              shouldCloseOnEsc={true}
              shouldCloseOnOverlayClick={true}
              shouldFocusAfterRender={true}
              shouldReturnFocusAfterClose={true}
              style={
                Object {
                  "content": Object {
                    "bottom": "auto",
                    "left": "50%",
                    "marginRight": "-50%",
                    "right": "auto",
                    "top": "50%",
                    "transform": "translate(-50%, -50%)",
                    "width": 400,
                  },
                }
              }
            >
              <div
                className="ReactModal__Overlay ReactModal__Overlay--after-open HoiPoi__Modal__overlay-1-1"
                onClick={[Function]}
                onMouseDown={[Function]}
                style={Object {}}
              >
                <div
                  className="ReactModal__Content ReactModal__Content--after-open HoiPoi__Modal__root-1-0"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  onMouseDown={[Function]}
                  onMouseUp={[Function]}
                  role="dialog"
                  style={
                    Object {
                      "bottom": "auto",
                      "left": "50%",
                      "marginRight": "-50%",
                      "right": "auto",
                      "top": "50%",
                      "transform": "translate(-50%, -50%)",
                      "width": 400,
                    }
                  }
                  tabIndex="-1"
                >
                  <div
                    className="HoiPoi__Modal__header-1-2"
                  >
                    <Text
                      className="HoiPoi__Modal__title-1-3"
                      isTruncated={false}
                      overrides={Object {}}
                      size="big"
                      type="normal"
                    >
                      <span
                        className="HoiPoi__Text__root-1-9 HoiPoi__Text__normal-1-16 HoiPoi__Text__big-1-14 HoiPoi__Modal__title-1-3"
                      >
                        Lorem modal
                      </span>
                    </Text>
                    <Icon
                      className="HoiPoi__Modal__closeIcon-1-6"
                      name="close"
                      overrides={Object {}}
                      size="medium"
                    >
                      <span
                        className="HoiPoi__Icon__root-1-20 HoiPoi__Icon__medium-1-22 HoiPoi__Modal__closeIcon-1-6"
                      >
                        <Close
                          color="#788590"
                        >
                          <svg
                            viewBox="0 0 18 18"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M9 7.409l7.08-7.08a1.125 1.125 0 1 1 1.59 1.591L10.591 9l7.08 7.08a1.125 1.125 0 1 1-1.591 1.59L9 10.591l-7.08 7.08A1.125 1.125 0 1 1 .33 16.08L7.409 9 .329 1.92A1.125 1.125 0 0 1 1.92.33L9 7.409z"
                              fill="#788590"
                              fillRule="nonzero"
                            />
                          </svg>
                        </Close>
                      </span>
                    </Icon>
                  </div>
                  <div
                    className="HoiPoi__Modal__content-1-5"
                  >
                    Lorem ipsum
                  </div>
                </div>
              </div>
            </ModalPortal>
          </Portal>
        </Modal>
      </Modal>
      <Modal
        closeTimeoutMS={300}
        isOpen={true}
        shouldCloseOnEsc={true}
        shouldCloseOnOverlayClick={true}
        size="large"
        title="Lorem modal"
        useCornerClose={true}
        useHeader={true}
      >
        <Modal
          ariaHideApp={false}
          bodyOpenClassName="ReactModal__Body--open"
          className="HoiPoi__Modal__root-1-0"
          closeTimeoutMS={300}
          isOpen={true}
          overlayClassName="HoiPoi__Modal__overlay-1-1"
          parentSelector={[Function]}
          portalClassName="ReactModalPortal"
          role="dialog"
          shouldCloseOnEsc={true}
          shouldCloseOnOverlayClick={true}
          shouldFocusAfterRender={true}
          shouldReturnFocusAfterClose={true}
          style={
            Object {
              "content": Object {
                "bottom": "auto",
                "left": "50%",
                "marginRight": "-50%",
                "right": "auto",
                "top": "50%",
                "transform": "translate(-50%, -50%)",
                "width": 875,
              },
            }
          }
        >
          <Portal
            containerInfo={
              <div
                class="ReactModalPortal"
              >
                <div
                  class="ReactModal__Overlay ReactModal__Overlay--after-open HoiPoi__Modal__overlay-1-1"
                >
                  <div
                    class="ReactModal__Content ReactModal__Content--after-open HoiPoi__Modal__root-1-0"
                    role="dialog"
                    style="width: 875px; top: 50%; left: 50%; margin-right: -50%; transform: translate(-50%, -50%);"
                    tabindex="-1"
                  >
                    <div
                      class="HoiPoi__Modal__header-1-2"
                    >
                      <span
                        class="HoiPoi__Text__root-1-9 HoiPoi__Text__normal-1-16 HoiPoi__Text__big-1-14 HoiPoi__Modal__title-1-3"
                      >
                        Lorem modal
                      </span>
                      <span
                        class="HoiPoi__Icon__root-1-20 HoiPoi__Icon__medium-1-22 HoiPoi__Modal__closeIcon-1-6"
                      >
                        <svg
                          viewBox="0 0 18 18"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M9 7.409l7.08-7.08a1.125 1.125 0 1 1 1.59 1.591L10.591 9l7.08 7.08a1.125 1.125 0 1 1-1.591 1.59L9 10.591l-7.08 7.08A1.125 1.125 0 1 1 .33 16.08L7.409 9 .329 1.92A1.125 1.125 0 0 1 1.92.33L9 7.409z"
                            fill="#788590"
                            fill-rule="nonzero"
                          />
                        </svg>
                      </span>
                    </div>
                    <div
                      class="HoiPoi__Modal__content-1-5"
                    >
                      Lorem ipsum
                    </div>
                  </div>
                </div>
              </div>
            }
          >
            <ModalPortal
              ariaHideApp={false}
              bodyOpenClassName="ReactModal__Body--open"
              className="HoiPoi__Modal__root-1-0"
              closeTimeoutMS={300}
              defaultStyles={
                Object {
                  "content": Object {
                    "WebkitOverflowScrolling": "touch",
                    "background": "#fff",
                    "border": "1px solid #ccc",
                    "borderRadius": "4px",
                    "bottom": "40px",
                    "left": "40px",
                    "outline": "none",
                    "overflow": "auto",
                    "padding": "20px",
                    "position": "absolute",
                    "right": "40px",
                    "top": "40px",
                  },
                  "overlay": Object {
                    "backgroundColor": "rgba(255, 255, 255, 0.75)",
                    "bottom": 0,
                    "left": 0,
                    "position": "fixed",
                    "right": 0,
                    "top": 0,
                  },
                }
              }
              isOpen={true}
              overlayClassName="HoiPoi__Modal__overlay-1-1"
              parentSelector={[Function]}
              portalClassName="ReactModalPortal"
              role="dialog"
              shouldCloseOnEsc={true}
              shouldCloseOnOverlayClick={true}
              shouldFocusAfterRender={true}
              shouldReturnFocusAfterClose={true}
              style={
                Object {
                  "content": Object {
                    "bottom": "auto",
                    "left": "50%",
                    "marginRight": "-50%",
                    "right": "auto",
                    "top": "50%",
                    "transform": "translate(-50%, -50%)",
                    "width": 875,
                  },
                }
              }
            >
              <div
                className="ReactModal__Overlay ReactModal__Overlay--after-open HoiPoi__Modal__overlay-1-1"
                onClick={[Function]}
                onMouseDown={[Function]}
                style={Object {}}
              >
                <div
                  className="ReactModal__Content ReactModal__Content--after-open HoiPoi__Modal__root-1-0"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  onMouseDown={[Function]}
                  onMouseUp={[Function]}
                  role="dialog"
                  style={
                    Object {
                      "bottom": "auto",
                      "left": "50%",
                      "marginRight": "-50%",
                      "right": "auto",
                      "top": "50%",
                      "transform": "translate(-50%, -50%)",
                      "width": 875,
                    }
                  }
                  tabIndex="-1"
                >
                  <div
                    className="HoiPoi__Modal__header-1-2"
                  >
                    <Text
                      className="HoiPoi__Modal__title-1-3"
                      isTruncated={false}
                      overrides={Object {}}
                      size="big"
                      type="normal"
                    >
                      <span
                        className="HoiPoi__Text__root-1-9 HoiPoi__Text__normal-1-16 HoiPoi__Text__big-1-14 HoiPoi__Modal__title-1-3"
                      >
                        Lorem modal
                      </span>
                    </Text>
                    <Icon
                      className="HoiPoi__Modal__closeIcon-1-6"
                      name="close"
                      overrides={Object {}}
                      size="medium"
                    >
                      <span
                        className="HoiPoi__Icon__root-1-20 HoiPoi__Icon__medium-1-22 HoiPoi__Modal__closeIcon-1-6"
                      >
                        <Close
                          color="#788590"
                        >
                          <svg
                            viewBox="0 0 18 18"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M9 7.409l7.08-7.08a1.125 1.125 0 1 1 1.59 1.591L10.591 9l7.08 7.08a1.125 1.125 0 1 1-1.591 1.59L9 10.591l-7.08 7.08A1.125 1.125 0 1 1 .33 16.08L7.409 9 .329 1.92A1.125 1.125 0 0 1 1.92.33L9 7.409z"
                              fill="#788590"
                              fillRule="nonzero"
                            />
                          </svg>
                        </Close>
                      </span>
                    </Icon>
                  </div>
                  <div
                    className="HoiPoi__Modal__content-1-5"
                  >
                    Lorem ipsum
                  </div>
                </div>
              </div>
            </ModalPortal>
          </Portal>
        </Modal>
      </Modal>
    </JssProvider>
  </ThemeProvider>
</Component>
`;

exports[`Modal without header 1`] = `
<Component>
  <ThemeProvider
    theme={
      Object {
        "colors": Object {
          "aqua100": "#e4fafd",
          "aqua500": "#76bde8",
          "aqua900": "#16386f",
          "black": "#262B34",
          "blackLight": "#5f656b",
          "blackberry": "#2e2d4c",
          "blackberryDark": "#24243C",
          "blue100": "#cceeff",
          "blue200": "#99d8ff",
          "blue400": "#3fa4ff",
          "blue500": "#007aff",
          "blue600": "#005edb",
          "blue900": "#00237a",
          "disabledGrey": "#ced4d9",
          "green": "#86AD20",
          "green100": "#f4fad2",
          "green200": "#e7f6a6",
          "green400": "#aecd50",
          "green500": "#86ad20",
          "green600": "#6e9417",
          "green900": "#345306",
          "greenLight": "#e7f1d5",
          "grey": "#697782",
          "greyLight": "#f0f3f5",
          "greySoft": "#788590",
          "lines": "#dce3eb",
          "link": "#216db3",
          "linkDark": "#174a79",
          "neutral100": "#f9f9fa",
          "neutral200": "#f4f5f6",
          "neutral300": "#e9ecee",
          "neutral400": "#dfe2e5",
          "neutral500": "#d4d8dc",
          "neutral600": "#a9b1b9",
          "neutral700": "#7d8a96",
          "neutral800": "#526373",
          "neutral900": "#273c50",
          "neutralBase": "#ffffff",
          "orange100": "#fff1cc",
          "orange200": "#ffde99",
          "orange400": "#ffb13f",
          "orange500": "#ff8c00",
          "orange600": "#db6e00",
          "orange900": "#7a2c00",
          "overlay": "rgba(33,33,33,0.55)",
          "placeholders": "#e1e4e7",
          "placeholdersHover": "#d0d4d8",
          "primary": "#FF8C00",
          "primaryDark": "#C87600",
          "primaryLight": "#fef4e6",
          "primarySoft": "#ff9d26",
          "purple": "#AA5B9C",
          "purple100": "#fae3ed",
          "purple500": "#aa5b9c",
          "purple900": "#441151",
          "purpleLight": "#EEDEEB",
          "red": "#f04540",
          "red100": "#ffe5d5",
          "red200": "#ffc5ac",
          "red400": "#ff7863",
          "red500": "#ff3b30",
          "red600": "#db2328",
          "red900": "#7a0929",
          "redDark": "#C43833",
          "redLight": "#FAE7E7",
          "redSoft": "#FF544F",
          "secondary": "#00A8Be",
          "secondaryGrey": "#e4eeff",
          "secondaryLight": "#D6EEF2",
          "secondaryOverlay": "rgba(2,168,189,0.10)",
          "secondarySoft": "#AADFE7",
          "shadow": "rgba(0, 0, 0, 0.25)",
          "tableHeader": "#f6f7f9",
          "tableHeaderHover": "#EBECEF",
          "tableHover": "#FAFBFC",
          "text": Object {
            "black": "#3c4248",
            "danger": "white",
            "default": "#697782",
            "green": "#86AD20",
            "greySoft": "#788590",
            "primary": "white",
            "red": "#f04540",
            "secondary": "#00A8Be",
            "white": "#FFFFFF",
            "yellow": "#E9B200",
          },
          "transparentBlack": "rgba(38, 43, 52, 0.8)",
          "turquoise100": "#c9fbf1",
          "turquoise500": "#00a8be",
          "turquoise900": "#00335b",
          "white": "#FFFFFF",
          "yellow": "#E9B200",
          "yellow100": "#fdf6cb",
          "yellow200": "#fcec97",
          "yellow400": "#f1cb3c",
          "yellow500": "#e9b200",
          "yellow600": "#c89400",
          "yellow900": "#6f4a00",
          "yellowDark": "#BE9100",
          "yellowLight": "#FCF7E5",
        },
        "effects": Object {
          "boxShadow": "0 3px 9px 0 rgba(0, 0, 0, 0.25)",
          "buttonActive": Object {
            "boxShadow": "inset 0 -2px 4px 0 rgba(51, 51, 51, 0.23)",
          },
        },
        "typography": Object {
          "bigText": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 20,
            "letterSpacing": 0.5,
          },
          "button": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 11,
            "lineHeight": 1.5,
          },
          "defaultText": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 13,
            "letterSpacing": 0.5,
          },
          "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
          "fontSizeBase": 13,
          "fontSizeSmall": 11,
          "largeText": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 16,
            "letterSpacing": 0.5,
          },
          "letterSpacing": 0.5,
          "lineHeightBase": 1.5,
          "smallText": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 11,
            "letterSpacing": 0.5,
          },
        },
        "utils": Object {
          "scrollbar": Object {
            "&::-webkit-scrollbar": Object {
              "height": 17,
              "width": 17,
            },
            "&::-webkit-scrollbar-thumb": Object {
              "background": "#e1e4e7",
              "backgroundClip": "content-box",
              "border": "4px solid rgba(0, 0, 0, 0)",
              "borderRadius": 10,
            },
            "&::-webkit-scrollbar-thumb:window-inactive": Object {
              "background": "#e1e4e7",
              "backgroundClip": "content-box",
              "border": "4px solid rgba(0, 0, 0, 0)",
              "borderRadius": 10,
            },
          },
        },
      }
    }
  >
    <JssProvider
      classNamePrefix="HoiPoi__"
      generateId={[Function]}
      jss={
        Jss {
          "generateId": [Function],
          "id": 3,
          "options": Object {
            "Renderer": [Function],
            "createGenerateId": [Function],
            "id": Object {
              "minify": false,
            },
            "plugins": Array [],
          },
          "plugins": PluginsRegistry {
            "plugins": Object {
              "external": Array [
                Object {
                  "onCreateRule": [Function],
                  "onProcessStyle": [Function],
                  "onUpdate": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                  "onProcessRule": [Function],
                },
                Object {
                  "onProcessRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                  "onProcessRule": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessRule": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
              ],
              "internal": Array [
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onCreateRule": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
              ],
            },
            "registry": Object {
              "onChangeValue": Array [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onCreateRule": Array [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onProcessRule": Array [
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onProcessSheet": Array [],
              "onProcessStyle": Array [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onUpdate": Array [
                [Function],
              ],
            },
          },
          "version": "10.3.0",
        }
      }
    >
      <Modal
        closeTimeoutMS={300}
        isOpen={true}
        shouldCloseOnEsc={true}
        shouldCloseOnOverlayClick={true}
        size="medium"
        title="Lorem modal"
        useCornerClose={true}
        useHeader={false}
      >
        <Modal
          ariaHideApp={false}
          bodyOpenClassName="ReactModal__Body--open"
          className="HoiPoi__Modal__root-2-0"
          closeTimeoutMS={300}
          isOpen={true}
          overlayClassName="HoiPoi__Modal__overlay-2-1"
          parentSelector={[Function]}
          portalClassName="ReactModalPortal"
          role="dialog"
          shouldCloseOnEsc={true}
          shouldCloseOnOverlayClick={true}
          shouldFocusAfterRender={true}
          shouldReturnFocusAfterClose={true}
          style={
            Object {
              "content": Object {
                "bottom": "auto",
                "left": "50%",
                "marginRight": "-50%",
                "right": "auto",
                "top": "50%",
                "transform": "translate(-50%, -50%)",
                "width": 670,
              },
            }
          }
        >
          <Portal
            containerInfo={
              <div
                class="ReactModalPortal"
              >
                <div
                  class="ReactModal__Overlay ReactModal__Overlay--after-open HoiPoi__Modal__overlay-2-1"
                >
                  <div
                    class="ReactModal__Content ReactModal__Content--after-open HoiPoi__Modal__root-2-0"
                    role="dialog"
                    style="width: 670px; top: 50%; left: 50%; margin-right: -50%; transform: translate(-50%, -50%);"
                    tabindex="-1"
                  >
                    <div
                      class="HoiPoi__Modal__content-2-5"
                    >
                      Lorem Ipsum
                    </div>
                  </div>
                </div>
              </div>
            }
          >
            <ModalPortal
              ariaHideApp={false}
              bodyOpenClassName="ReactModal__Body--open"
              className="HoiPoi__Modal__root-2-0"
              closeTimeoutMS={300}
              defaultStyles={
                Object {
                  "content": Object {
                    "WebkitOverflowScrolling": "touch",
                    "background": "#fff",
                    "border": "1px solid #ccc",
                    "borderRadius": "4px",
                    "bottom": "40px",
                    "left": "40px",
                    "outline": "none",
                    "overflow": "auto",
                    "padding": "20px",
                    "position": "absolute",
                    "right": "40px",
                    "top": "40px",
                  },
                  "overlay": Object {
                    "backgroundColor": "rgba(255, 255, 255, 0.75)",
                    "bottom": 0,
                    "left": 0,
                    "position": "fixed",
                    "right": 0,
                    "top": 0,
                  },
                }
              }
              isOpen={true}
              overlayClassName="HoiPoi__Modal__overlay-2-1"
              parentSelector={[Function]}
              portalClassName="ReactModalPortal"
              role="dialog"
              shouldCloseOnEsc={true}
              shouldCloseOnOverlayClick={true}
              shouldFocusAfterRender={true}
              shouldReturnFocusAfterClose={true}
              style={
                Object {
                  "content": Object {
                    "bottom": "auto",
                    "left": "50%",
                    "marginRight": "-50%",
                    "right": "auto",
                    "top": "50%",
                    "transform": "translate(-50%, -50%)",
                    "width": 670,
                  },
                }
              }
            >
              <div
                className="ReactModal__Overlay ReactModal__Overlay--after-open HoiPoi__Modal__overlay-2-1"
                onClick={[Function]}
                onMouseDown={[Function]}
                style={Object {}}
              >
                <div
                  className="ReactModal__Content ReactModal__Content--after-open HoiPoi__Modal__root-2-0"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  onMouseDown={[Function]}
                  onMouseUp={[Function]}
                  role="dialog"
                  style={
                    Object {
                      "bottom": "auto",
                      "left": "50%",
                      "marginRight": "-50%",
                      "right": "auto",
                      "top": "50%",
                      "transform": "translate(-50%, -50%)",
                      "width": 670,
                    }
                  }
                  tabIndex="-1"
                >
                  <div
                    className="HoiPoi__Modal__content-2-5"
                  >
                    Lorem Ipsum
                  </div>
                </div>
              </div>
            </ModalPortal>
          </Portal>
        </Modal>
      </Modal>
    </JssProvider>
  </ThemeProvider>
</Component>
`;
